# synchronizer

./: CMakeLists.txt  README.md  package.xml  prepare.sh  run.sh  run_rosbag.sh  run_validation.sh  test.sh
config/: config_1.yaml  config_10.yaml  config_11.yaml  config_2.yaml  config_3.yaml  config_4.yaml  config_5.yaml  config_6.yaml  config_7.yaml  config_8.yaml  config_9.yaml
include/: helper.h  publisher.h  subscriber_evaluation.h  subscriber_validation.h
message_filters/: CMakeLists.txt
message_filters/sync_policies/: approximate_time_model.h  latest_policy.h
message_filters/test/: test_approximate_time_model.cpp  test_latest_policy.cpp
scripts/: bound_with_delay.py  compare_1.py  compare_2.py  histogram_channel_num.py  histogram_period_factor.py  histogram_period_lower.py  histogram_varied_delay.py
src/: evaluation.cpp  validation_rosbag.cpp  validation_timer.cpp
